[package]
name = "apache-rs"
description = "Rust FFI for creating Apache httpd modules."
version = "0.0.0"
authors = ["studersi <rust@studer.si>"]
edition = "2018"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
