[package]
name = "apache-rs"
description = "Rust FFI for creating Apache httpd modules."
version = "0.0.3"
authors = ["studersi <rust@studer.si>"]
edition = "2018"
license-file = "LICENSE"
readme = "README.md"
documentation = "https://docs.rs/apache-rs"
repository = "https://github.com/studersi/apache-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.69.4"

[dependencies]
